--- a/marketing/fastly/index.html
+++ b/marketing/fastly/index.html
@@ -8,9 +8,6 @@
 
   <body>
     <div id="app"><!-- SSR_INNER_HTML --></div>
-    <!--    <script src="<CLIENT_HYDRATION_SCRIPT_PATH>"></script>-->
-    <script>
-      console.log('hey');
-    </script>
+    <script src="/client.js"></script>
   </body>
 </html>
