--- a/web/src/fastly/index.html
+++ b/web/src/fastly/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app"><!-- SSR_INNER_HTML --></div>
-    <!--    <script src="/client.js"></script>-->
-    <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>
+    <script src="/client.js"></script>
+    <!--    <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>-->
   </body>
 </html>
