--- a/web/src/fastly/index.html
+++ b/web/src/fastly/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="app"><!-- SSR_INNER_HTML --></div>
-    <script src="/client.js"></script>
-    <!--    <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>-->
+    <!--    <script src="/client.js"></script>-->
+    <!--    couldnt get logentries streaming working, using direct path for now-->
+    <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>
   </body>
 </html>
