--- a/web/src/fastly/index.html
+++ b/web/src/fastly/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>fastly edge ssr/spa combo react app</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"><!-- SSR_INNER_HTML --></div>
+    <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>
   </body>
 </html>
