--- a/web/src/fastly/index.html
+++ b/web/src/fastly/index.html
@@ -6,7 +6,7 @@
     <title>fastly edge ssr/spa combo react app</title>
   </head>
   <body>
-    <div id="app"><!-- SSR_INNER_HTML --></div>
+    <div id="app"></div>
     <script src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>
   </body>
 </html>
