--- a/web/src/fastly/index.html
+++ b/web/src/fastly/index.html
@@ -2,8 +2,10 @@
 <html lang="id">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
     <title>fastly edge ssr/spa combo react app</title>
+<!--    <script defer="defer" src="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.js"></script>-->
+    <link href="https://my-vite-webapp.s3.us-west-2.amazonaws.com/client.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
