--- a/web/src/fastly/template.html
+++ b/web/src/fastly/template.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
     <title>fastly edge ssr/spa combo react app</title>
+    <script id="__SSR_PROPS__" type="application/json"></script>
   </head>
   <body>
     <div id="app"></div>
