--- a/web/internals/template.prod.html
+++ b/web/internals/template.prod.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-    <title>fastly edge ssr react app</title>
+    <title>fastly compute@edge ssr react app</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
     <script id="__SSR_PROPS__" type="application/json"></script>
   </head>
